# Point-Cloud-Segmentation

./: CMakeLists.txt  README.md
Data/cmu_oakland_data/: oakland_part2_ac.xyz_label_conf  oakland_part2_ad.xyz_label_conf  oakland_part2_ae.xyz_label_conf  oakland_part2_ag.xyz_label_conf  oakland_part2_ah.xyz_label_conf  oakland_part2_ai.xyz_label_conf  oakland_part2_aj.xyz_label_conf  oakland_part2_ak.xyz_label_conf  oakland_part2_al.xyz_label_conf  oakland_part2_ao.xyz_label_conf  oakland_part3_aj.xyz_label_conf  oakland_part3_ak.xyz_label_conf  oakland_part3_al.xyz_label_conf  oakland_part3_am.xyz_label_conf  oakland_part3_an.xyz_label_conf  oakland_part3_ao.xyz_label_conf  oakland_part3_ap.xyz_label_conf
Data/cmu_oakland_data/stats/: all.stats~  oakland_part2_ac.stats  oakland_part2_ad.stats  oakland_part2_ae.stats  oakland_part2_ag.stats  oakland_part2_ah.stats  oakland_part2_ai.stats  oakland_part2_aj.stats  oakland_part2_ak.stats  oakland_part2_al.stats  oakland_part2_ao.stats  oakland_part3_aj.stats  oakland_part3_ak.stats  oakland_part3_al.stats  oakland_part3_am.stats  oakland_part3_an.stats  oakland_part3_ao.stats  oakland_part3_ap.stats
Data/cmu_oakland_data/wrl/: oakland_part3_ap.wrl
include/file_utils/: file_utils.h
include/kdtree/: kdtree.h
include/point_cloud_utils/: point_cloud_utils.h
include/render_utils/: render_utils.h
lib/: libfile_utils.dylib  libkdtree.dylib  libpoint_cloud_utils.dylib  librender_utils.dylib
src/: file_utils.cpp  kdtree.cpp  point_cloud_seg.cpp  point_cloud_utils.cpp  render_utils.cpp
